# Haskell2017Spring

./: .gitignore
Project 0 - First Intepreter.hsproj/: .uuid  Project0FirstIntepreter.cabal  Question1.hs  Question2.hs  _Question1.hsplay  _Question2.hsplay
Project 1 - Predicting Failure.hsproj/: .uuid  ABEParser.hs  Project1PredictingFailure.cabal  Question1.hs  TestCases.hs  _ABEParser.hsplay  _Question1.hsplay  _TestCases.hsplay
Project 2 - Booleans, Identifiers, and Lists.hsproj/: .uuid  Project2.hs  Project2BooleansIdentifiersandLists.cabal  Test.hs  _Project2.hsplay
Project 3 - Functions and Elaboration.hsproj/: .uuid  Main.hs  Proj3Utils.hs  Project3FunctionsandElaboration.cabal  Q1.hs  Q2.hs  Q3.hs  _Main.hsplay  _Q1.hsplay  _Q2.hsplay  _Q3.hsplay
Project 4 - Type Checking.hsproj/: .uuid  Main.hs  Proj4Utils.hs  Project4TypeChecking.cabal  Q1Q2.hs  Q3.hs  Q4.hs  _Main.hsplay  _Q4.hsplay
